k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-bye-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 5000

          - path: /hello-health
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 5000

          - path: /bye
            pathType: Prefix
            backend:
              service:
                name: bye-service
                port:
                  number: 6000

          - path: /bye-health
            pathType: Prefix
            backend:
              service:
                name: bye-service
                port:
                  number: 6000
